--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,8 +22,8 @@
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
+  <script src="https://apis.google.com/js/platform.js"></script>
   <!-- built files will be auto injected -->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 
 </html>
